tests/error/comptime_error_reference_variable.bz
// error: unable to match value of type 'i32' to '&mut auto'
// note: mismatched mutability of types 'i32' and 'mut auto'
// error: failed to resolve variable declaration
// note: while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function main()
{
	(consteval {
		let i = 0;
		let &mut r = i;
		r = 3;
	});
}
